feat: add title skils section and add month to footer

--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
     <section class="section sec-4 container" id="skills">
       <h2 class="section-heading">SKILLS</h2>
       <ul class="skills-list animate">
-        <li class="skills-item animate" style="--i:0;">
+        <li title="Html" class="skills-item animate" style="--i:0;">
           <img src="assets/img/html.png" alt="html" width="150" height="150">
         </li>
-        <li class="skills-item animate" style="--i:1;">
+        <li title="Css" class="skills-item animate" style="--i:1;">
           <img src="assets/img/css.png" alt="Css" width="150" height="150">
         </li>
-        <li class="skills-item animate" style="--i:2;">
+        <li title="JavaScript" class="skills-item animate" style="--i:2;">
           <img src="assets/img/js.png" alt="Js" width="150" height="150">
         </li>
-        <li class="skills-item animate" style="--i:3;">
+        <li title="React" class="skills-item animate" style="--i:3;">
           <img src="assets/img/react.png" alt="react" width="115" height="150">
         </li>
       </ul>
@@ -244,7 +244,7 @@
   <footer class="footer">
     <ul class="footer-list">
       <li class="footer-item">
-        <p class="section-text">&copy;2023 by Sabohat </p>
+        <p class="section-text">&copy;Nov/2023 by Sabohat </p>
       </li>
       <li class="footer-item">
         <a class="link" href="https://github.com/Sabohatfrontend" target="_blank" rel="noopener noreferrer"
